--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <header role="banner" class="probootstrap-header">
 <div class="container-fluid">
-<a href="index.html" class="probootstrap-logo">Nephron<span>AI</span></a>
+<a href="index" class="probootstrap-logo">Nephron<span>AI</span></a>
 <a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
 <div class="mobile-menu-overlay"></div>
 <nav role="navigation" class="probootstrap-nav hidden-xs">
 <ul class="probootstrap-main-nav">
-<li class="active"><a href="index.html">Home</a></li>
-<li><a href="contribute.html">Contribute</a></li>
-<li><a href="about.html">About</a></li>
+<li class="active"><a href="index">Home</a></li>
+<li><a href="contribute">Contribute</a></li>
+<li><a href="about">About</a></li>
 <li><a href="https://ayushanand18.github.io/">NightLight AI</a></li>
 </ul>
 <div class="extra-text visible-xs">
@@ -52,7 +52,7 @@
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>With the power AI, and intelligence of the Human brain we have created a solution to answer World's Medical Crisis- Chronic Kidney Disease.</h2>
 </div>
-<p class="watch-intro probootstrap-animate"><a href="/classify.html" class="popup-vimeo">Try it now<i class="icon-play2"></i></a></p><br>
+<p class="watch-intro probootstrap-animate"><a href="classify" class="popup-vimeo">Try it now<i class="icon-play2"></i></a></p><br>
 </div>
 </div>
 </div>
@@ -109,7 +109,7 @@
 <div class="row">
 <div class="col-md-4 col-md-offset-4 probootstrap-animate">
 <p class="text-center">
-<a href="classify.html" class="btn btn-primary btn-lg btn-block" role="button">Get My Prediction</a>
+<a href="classify" class="btn btn-primary btn-lg btn-block" role="button">Get My Prediction</a>
 </p>
 </div>
 </div>
@@ -122,7 +122,7 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>But wait...</h2>
-<p class="lead">Here's some additional information for you. We aren't a big team yet, it's just one contributor here - a 15 year old student who wishes to aim good for mankind - Ayush Anand. Why not <a href="contribute.html">Contribute</a> to us. We'll be more than glad.</p>
+<p class="lead">Here's some additional information for you. We aren't a big team yet, it's just one contributor here - a 15 year old student who wishes to aim good for mankind - Ayush Anand. Why not <a href="contribute">Contribute</a> to us. We'll be more than glad.</p>
 </div>
 </div>
 </div>
@@ -134,7 +134,7 @@
 <div class="row">
 <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
 <h2>Know About the Creator</h2>
-<p class="lead">Ahh! I'm sorry if i forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me.html">Know more about him</a></p>
+<p class="lead">Ahh! I'm sorry if i forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me">Know more about him</a></p>
 </div>
 </div>
 </div>
@@ -149,7 +149,7 @@
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
 <p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
-<p><a href="#" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
+<p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
 
