--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>uiCookies:Format &mdash; Free Bootstrap Theme, Free Responsive Bootstrap Website Template</title>
-<meta name="description" content="Free Bootstrap Theme by uicookies.com">
-<meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+<title>About NephronAI</title>
+<meta name="description" content="Know About NephronAI - an AI project to use AI to fight Chronic Kidney Disease. Bootstrap Theme by uicookies.com">
+<meta name="keywords" content="NephronAI, about nephronai, nightlight ai, about">
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -19,26 +19,25 @@
 
 <header role="banner" class="probootstrap-header">
 <div class="container-fluid">
-<a href="index.html" class="probootstrap-logo">Format<span>.</span></a>
+<a href="index" class="probootstrap-logo">Nephron<span>AI</span></a>
 <a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
 <div class="mobile-menu-overlay"></div>
 <nav role="navigation" class="probootstrap-nav hidden-xs">
 <ul class="probootstrap-main-nav">
-<li><a href="index.html">Home</a></li>
-<li><a href="portfolio.html">Portfolio</a></li>
-<li><a href="products.html">Product</a></li>
-<li class="active"><a href="about.html">About</a></li>
-<li><a href="contact.html">Contact</a></li>
+<li><a href="index">Home</a></li>
+<li><a href="contribute.html">Contribute</a></li>
+<li class="active"><a href="about">About</a></li>
+<li><a href="https://ayushanand18.github.io/">NightLightAI</a></li>
 </ul>
 <div class="extra-text visible-xs">
 <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
 <h5>Social</h5>
 <ul class="social-buttons">
-<li><a href="#"><i class="icon-twitter"></i></a></li>
+<li><a href="https://twitter.com/theayushanand"><i class="icon-twitter"></i></a></li>
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2017 uiCookies:Format. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2019 NightLight AI. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -49,11 +48,11 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
-<h1 class="probootstrap-animate">About</h1>
+<h1 class="probootstrap-animate">About NephronAI</h1>
 <div class="probootstrap-subtitle probootstrap-animate">
-<h2>A free html website template for creative agency like you! brought to you by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></h2>
+<h2>We are using AI to predict, provide a cause and deliver solution to Chronic Kidney Disease.</h2>
 </div>
-<p class="watch-intro probootstrap-animate"><a href="https://vimeo.com/45830194" class="popup-vimeo">Watch the video <i class="icon-play2"></i></a></p>
+<p class="watch-intro probootstrap-animate"><a href="classify">Get Yourself Checked <i class="icon-play2"></i></a></p>
 </div>
 </div>
 </div>
@@ -64,23 +63,18 @@
 <div class="container">
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
-<h2>Our History</h2>
-<p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+<h2>Our Aim</h2>
+<p class="lead">Kidneys are essential organs of human body that perform an even important function - filter out waste from our body. Chronic kidney disease includes conditions that damage your kidneys and decrease their ability to keep you healthy by doing the jobs listed. If kidney disease gets worse, wastes can build to high levels in your blood and make you feel sick. When kidney disease progresses, it may eventually lead to kidney failure, which requires dialysis or a kidney transplant to maintain life.<br/>
+But if chronic kidney disease is detected early then we can easily save thousands of lives worldwide.
+</p>
 </div>
 </div>
 <div class="row mb50">
 <div class="col-md-12">
-<p><img src="img/hero_bg_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></p>
+<p>Therefore, we came up with the idea of creating an AI (Artificial Intelligence) powered system to diagnos the disease, predict its cause and also recommend a solution to reduce the consequences of the disease.</p>
 </div>
 </div>
-<div class="row">
-<div class="col-md-6">
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-</div>
-<div class="col-md-6">
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-</div>
-</div>
+
 </div>
 </section>
 <section class="probootstrap-section probootstrap-border-top">
@@ -88,30 +82,15 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>The Team</h2>
-<p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-</div>
+<p class="lead">Even though there's only one face here yet we say 'we' because it's never a one man army when it comes to innovation. We thank each and every person whose direct or indirect contribution has brought us to where we are today. We use technologies like <a href="https://studio.azureml.net/">Microsoft Azure Machine Learning</a>, <a href="https://zeit.co/">ZEIT Now</a> as well as <a href="https://pages.github.com/">GitHub pages</a>. We thank them for their services.</p></div>
 </div>
 <div class="row">
 <div class="col-md-3 col-sm-6 probootstrap-animate">
-<img src="img/person_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-<h3>Jeremy Slater</h3>
-<p>Web Designer</p>
+<img src="img/prpic.png" alt="Ayush Anand NightLight AI" class="img-responsive">
+<h3>Ayush Anand</h3>
+<p>Founder | Owner</p>
 </div>
-<div class="col-md-3 col-sm-6 probootstrap-animate">
-<img src="img/person_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-<h3>James Butterly</h3>
-<p>Web Designer</p>
-</div>
-<div class="col-md-3 col-sm-6 probootstrap-animate">
-<img src="img/person_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-<h3>James Smith</h3>
-<p>Web Designer</p>
-</div>
-<div class="col-md-3 col-sm-6 probootstrap-animate">
-<img src="img/person_4.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-<h3>Chris White</h3>
-<p>Web Designer</p>
-</div>
+
 </div>
 </div>
 </section>
@@ -120,117 +99,60 @@
 <div class="container">
 <div class="row text-center">
 <div class="col-lg-8 col-md-offset-2 mb30 section-heading probootstrap-animate">
-<h2>Let's Work Together</h2>
-<p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+<h2>Let's work together</h2>
+<p class="lead">We really welcome partnerships and contributions to our projects. You can be an Individual, Hospital, Doctor or even a Computer Science Enthusiast. </p>
 </div>
 </div>
 <div class="row">
 <div class="col-md-4 col-md-offset-4 probootstrap-animate">
 <p class="text-center">
-<a href="#" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">Contact Us</a>
+<a href="contribute" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">Contribute</a>
 </p>
 </div>
 </div>
 </div>
 </section>
 
-
 <footer role="contentinfo" class="probootstrap-footer">
 <div class="container">
 <div class="row">
+
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
-<h3>About Format</h3>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-<p><a href="#" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
+<h3>About NephronAI</h3>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
+<p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
+</div>
+
+<div class="col-md-4">
+<div class="probootstrap-footer-widget">
+<h3>Important Links</h3>
+<ul class="probootstrap-footer-widget">
+<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/privacy">Privacy</a></li>
+<li><a href="/terms">Terms</a></li>
+</ul>
+</div>
+</div>
+
+<div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>Connect With Us</h3>
 <ul class="probootstrap-footer-social">
-<li><a href=""><i class="icon-twitter"></i></a></li>
+<li><a href="https://twitter.com/theayushanand"><i class="icon-twitter"></i></a></li>
 <li><a href=""><i class="icon-facebook"></i></a></li>
 <li><a href=""><i class="icon-instagram2"></i></a></li>
 </ul>
 </div>
 </div>
-<div class="col-md-4">
-<div class="probootstrap-footer-widget">
-<h3>Popular Products</h3>
-<ul class="probootstrap-product-list">
-<li class="mb20">
-<a href="#">
-<figure><img src="img/img_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-<p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
-</div>
-</a>
-</li>
-<li class="mb20">
-<a href="#">
-<figure><img src="img/img_4.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-<p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
-</div>
-</a>
-</li>
-<li class="mb20">
-<a href="#">
-<figure><img src="img/img_5.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-<p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
-</div>
-</a>
-</li>
-</ul>
-</div>
-</div>
-<div class="col-md-4">
-<div class="probootstrap-footer-widget">
-<h3>Recent Post</h3>
-<ul class="probootstrap-blog-list">
-<li>
-<a href="#">
-<figure><img src="img/img_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-</div>
-</a>
-</li>
-<li>
-<a href="#">
-<figure><img src="img/img_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-</div>
-</a>
-</li>
-<li>
-<a href="#">
-<figure><img src="img/img_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-</div>
-</a>
-</li>
-</ul>
-</div>
-</div>
-</div>
 <div class="row mt40">
 <div class="col-md-12 text-center">
 <p>
-<small>&copy; 2017 <a href="https://uicookies.com/" target="_blank">uiCookies:Format</a>. All Rights Reserved. <br> Designed &amp; Developed by <a href="https://uicookies.com/" target="_blank">uicookies.com</a> Demo Images: Unsplash</small><br>
+<small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
+</div>
 </div>
 </div>
 </div>
