--- a/contribute.html
+++ b/contribute.html
@@ -24,9 +24,9 @@
 <div class="mobile-menu-overlay"></div>
 <nav role="navigation" class="probootstrap-nav hidden-xs">
 <ul class="probootstrap-main-nav">
-<li><a href="index.html">Home</a></li>
+<li><a href="index">Home</a></li>
 <li class="active"><a href="contribute.html">Contribute</a></li>
-<li><a href="products.html">Product</a></li>
+<li><a href="about">About</a></li>
 <li><a href="https://ayushanand18.github.io/">NightLightAI</a></li>
 
 </ul>
