--- a/about.html
+++ b/about.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129803213-2" defer></script>
+<script defer>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129803213-2');
+</script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About NephronAI</title>
@@ -86,7 +94,7 @@ But if chronic kidney disease is detected early then we can easily save thousand
 </div>
 <div class="row">
 <div class="col-md-3 col-sm-6 probootstrap-animate">
-<img src="img/prpic.png" alt="Ayush Anand NightLight AI" class="img-responsive">
+<img src="assets/prpic.png" alt="Ayush Anand NightLight AI" class="img-responsive">
 <h3>Ayush Anand</h3>
 <p>Founder | Owner</p>
 </div>
