--- a/classify.html
+++ b/classify.html
@@ -2,6 +2,14 @@
 <html>
     <meta charset="utf-8" name="vieport" content="width=device-width,initial-scale=1,user-scalable=1"/>
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129803213-2" defer></script>
+    <script defer>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-129803213-2');
+    </script>
     <title>NephronAI -Classify Chronic Kidney Disease</title>
     <style>
         body{
