--- a/contribute.html
+++ b/contribute.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129803213-2" defer></script>
+<script defer>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129803213-2');
+</script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>NightLight AI:NephronAI Contribute</title>
+<title>NephronAI | Contribute</title>
 <meta name="description" content="Free Bootstrap Theme by NightLight AI.com">
 <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
@@ -19,7 +28,7 @@
 
 <header role="banner" class="probootstrap-header">
 <div class="container-fluid">
-<a href="index.html" class="probootstrap-logo">NephronAI<span>.</span></a>
+<a href="index.html" class="probootstrap-logo">Nephron<span>AI</span></a>
 <a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
 <div class="mobile-menu-overlay"></div>
 <nav role="navigation" class="probootstrap-nav hidden-xs">
@@ -38,7 +47,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2017 NightLight AI:NephronAI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2019 NightLight AI. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -49,11 +58,11 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
-<h1 class="probootstrap-animate">Contact</h1>
+<h1 class="probootstrap-animate">Contribute to NephronAI</h1>
 <div class="probootstrap-subtitle probootstrap-animate">
-<h2>A free html website template for creative agency like you! brought to you by <a href="https://NightLight AI.com/" target="_blank">NightLight AI.com</a></h2>
+<h2>We don't feel good without you. That's because we believe innovation is better with 'we' than 'I'.</a></h2>
 </div>
-<p class="watch-intro probootstrap-animate"><a href="https://vimeo.com/45830194" class="popup-vimeo">Watch the video <i class="icon-play2"></i></a></p>
+<p class="watch-intro probootstrap-animate"><a href="about" class="popup-vimeo">Know more <i class="icon-play2"></i></a></p>
 </div>
 </div>
 </div>
@@ -64,7 +73,9 @@
 <div class="container">
 <div class="row mb60">
 <div class="col-md-8 col-md-offset-2 probootstrap-animate">
-<form action="#" method="post" class="probootstrap-form">
+    <h1>Communicate to us your ideas...</h1>
+    <p>And we'll get back to you as soon as possible</p>
+<form action="https://formspree.io/kingwarrior880@gmail.com" method="post" class="probootstrap-form">
 <div class="form-group">
 <label for="name">Full Name</label>
 <input type="text" class="form-control" id="name" name="name">
@@ -87,32 +98,7 @@
 </form>
 </div>
 </div>
-<div class="row">
-<div class="col-md-4">
-<h3>New York</h3>
-<ul class="probootstrap-contact-info">
-<li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li>
-<li><i class="icon-mail"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e68f888089a682898b878f88c885898b">[email&#160;protected]</a></span></li>
-<li><i class="icon-phone2"></i><span>+123 456 7890</span></li>
-</ul>
-</div>
-<div class="col-md-4">
-<h3>London</h3>
-<ul class="probootstrap-contact-info">
-<li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li>
-<li><i class="icon-mail"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="375e5951587753585a565e591954585a">[email&#160;protected]</a></span></li>
-<li><i class="icon-phone2"></i><span>+123 456 7890</span></li>
-</ul>
-</div>
-<div class="col-md-4">
-<h3>Australia</h3>
-<ul class="probootstrap-contact-info">
-<li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li>
-<li><i class="icon-mail"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="bdd4d3dbd2fdd9d2d0dcd4d393ded2d0">[email&#160;protected]</a></span></li>
-<li><i class="icon-phone2"></i><span>+123 456 7890</span></li>
-</ul>
-</div>
-</div>
+
 </div>
 </section>
 
@@ -120,14 +106,14 @@
 <div class="container">
 <div class="row text-center">
 <div class="col-lg-8 col-md-offset-2 mb30 section-heading probootstrap-animate">
-<h2>Let's Work Together</h2>
-<p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+<h2>We're Public</h2>
+<p class="lead"><b>Our algorithms and data are transparent and we strongly care for privacy too. Visit our GitHub repository for the code behind the project. Links to our privacy policy and terms of service are attached in the footer.</b></p>
 </div>
 </div>
 <div class="row">
 <div class="col-md-4 col-md-offset-4 probootstrap-animate">
 <p class="text-center">
-<a href="#" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">Contact Us</a>
+<a href="https://github.com/ayushanand18" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">GitHub Repository</a>
 </p>
 </div>
 </div>
@@ -138,103 +124,48 @@
 <footer role="contentinfo" class="probootstrap-footer">
 <div class="container">
 <div class="row">
+
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-<p><a href="#" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
+<p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
+</div>
+
+<div class="col-md-4">
+<div class="probootstrap-footer-widget">
+<h3>Important Links</h3>
+<ul class="probootstrap-footer-widget">
+<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/privacy">Privacy</a></li>
+<li><a href="/terms">Terms</a></li>
+</ul>
+</div>
+</div>
+
+<div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>Connect With Us</h3>
 <ul class="probootstrap-footer-social">
-<li><a href=""><i class="icon-twitter"></i></a></li>
+<li><a href="https://twitter.com/theayushanand"><i class="icon-twitter"></i></a></li>
 <li><a href=""><i class="icon-facebook"></i></a></li>
 <li><a href=""><i class="icon-instagram2"></i></a></li>
 </ul>
 </div>
 </div>
-<div class="col-md-4">
-<div class="probootstrap-footer-widget">
-<h3>Popular Products</h3>
-<ul class="probootstrap-product-list">
-<li class="mb20">
-<a href="#">
-<figure><img src="img/img_3.jpg" alt="Free Bootstrap Template by NightLight AI.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-<p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
-</div>
-</a>
-</li>
-<li class="mb20">
-<a href="#">
-<figure><img src="img/img_4.jpg" alt="Free Bootstrap Template by NightLight AI.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-<p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
-</div>
-</a>
-</li>
-<li class="mb20">
-<a href="#">
-<figure><img src="img/img_5.jpg" alt="Free Bootstrap Template by NightLight AI.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-<p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
-</div>
-</a>
-</li>
-</ul>
-</div>
-</div>
-<div class="col-md-4">
-<div class="probootstrap-footer-widget">
-<h3>Recent Post</h3>
-<ul class="probootstrap-blog-list">
-<li>
-<a href="#">
-<figure><img src="img/img_1.jpg" alt="Free Bootstrap Template by NightLight AI.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-</div>
-</a>
-</li>
-<li>
-<a href="#">
-<figure><img src="img/img_2.jpg" alt="Free Bootstrap Template by NightLight AI.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-</div>
-</a>
-</li>
-<li>
-<a href="#">
-<figure><img src="img/img_3.jpg" alt="Free Bootstrap Template by NightLight AI.com" class="img-responsive"></figure>
-<div class="text">
-<h4>River named Duden flows</h4>
-<p>A small river named Duden flows by their place</p>
-</div>
-</a>
-</li>
-</ul>
-</div>
-</div>
-</div>
 <div class="row mt40">
 <div class="col-md-12 text-center">
 <p>
-<small>&copy; 2017 <a href="https://NightLight AI.com/" target="_blank">NightLight AI:NephronAI</a>. All Rights Reserved. <br> Designed &amp; Developed by <a href="https://NightLight AI.com/" target="_blank">NightLight AI.com</a> Demo Images: Unsplash</small><br>
+<small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
 </div>
 </div>
+</div>
 </footer>
+
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/scripts.min.js" type="b1bfda8595a67de529fdc4fe-text/javascript"></script>
 <script src="js/main.min.js" type="b1bfda8595a67de529fdc4fe-text/javascript"></script>
